--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,4 +1,7 @@
 /* Reset */
+@import url(./_reset.css);
+@import url(./_global.css);
+@import url(./_variables.css);
 
 /* Layout */
 @import url(./layout/header.css);
