--- a/public/styles/layout/header.css
+++ b/public/styles/layout/header.css
@@ -1,21 +1,90 @@
-:root {
-  --brand-01: #007bff;
-  --text-01: #333333;
-  --bg-01: #f8f9fa;
+.head-sect {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: radial-gradient(
+      circle at center,
+      var(--brand-06),
+      transparent 70%
+    ),
+    var(--bg-01);
 }
-.head {
-  padding: 20px;
+.box-center {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: var(--gap-03);
+}
+/* Avatar */
+.box-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#avatar {
+  height: 13rem;
+  width: 13rem;
+  display: flex;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 2px solid var(--brand-01);
+  box-shadow: var(--shadow-brand-01);
+  transition: var(--anima-01);
+  &:hover {
+    box-shadow: var(--shadow-brand-04);
+  }
+}
+/* Texts */
+.box-center .texts {
   text-align: center;
-  background-color: var(--bg-01);
+  & p {
+    margin-top: -0.25rem;
+    color: var(--text-02);
+  }
 }
-.headNav-a {
-  padding: 0.5em 0.7rem;
-  text-decoration: none;
-  color: var(--text-01);
+
+/* Social */
+.social-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: var(--gap-03);
+}
+.social-link {
+  padding: 0.25rem;
+  display: flex;
+  color: var(--text-02);
+  border: 2px var(--border-03);
+  border-radius: var(--radius-01);
+  transition: var(--anima-01);
+  &:hover {
+    border: 2px solid var(--brand-01);
+    box-shadow: var(--shadow-block);
+    transform: translateY(-4px);
+  }
+}
+.social-link ion-icon {
+  font-size: 1.5rem;
+}
+
+/* ======= Nav Content ======== */
+.nav-memu {
+  height: 10vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+.menu-link {
+  padding: 0.5rem 0.25rem;
+  font-weight: 500;
+  cursor: pointer;
+  opacity: 0.5;
   position: relative;
-  border-radius: 0.4rem;
+  transition: var(--anima-01);
 }
-.headNav-a::after {
+.menu-link::after {
   content: '';
   height: 2px;
   width: 0%;
@@ -23,16 +92,37 @@
   position: absolute;
   left: 50%;
   bottom: 0;
+  border-radius: var(--radius-01);
   background: var(--brand-01);
-  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  transition: var(--anima-01);
 }
-.headNav-a:hover:after {
+.menu-link:hover:after {
   width: 100%;
   left: 0;
 }
-.headNav-a.active {
-  pointer-events: none;
-  background: var(--brand-01);
+.menu-link:hover {
+  color: var(--brand-01);
+  opacity: 1;
+}
+.menu-link.menuActive {
+  color: var(--brand-01);
+  opacity: 1;
+}
+.menu-link.menuActive:after {
+  width: 100%;
+  left: 0;
+}
+/* Content */
+.nav-content {
+  height: 90vh;
+  color: var(--text-01);
+}
+.art-content {
+  display: none;
+  height: 100%;
+}
+.art-content.contActive {
+  display: flex;
 }
 
 .main {
