--- a/public/styles/layout/header.css
+++ b/public/styles/layout/header.css
@@ -3,11 +3,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: radial-gradient(
-      circle at center,
-      var(--brand-06),
-      transparent 70%
-    ),
+  background:
+    radial-gradient(circle at center, var(--brand-06), transparent 70%),
     var(--bg-01);
 }
 .box-center {
@@ -66,92 +63,6 @@
 }
 .social-link ion-icon {
   font-size: 1.5rem;
-}
-
-/* ======= Nav Content ======== */
-.nav-memu {
-  height: 10vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
-}
-.menu-link {
-  padding: 0.5rem 0.25rem;
-  font-weight: 500;
-  cursor: pointer;
-  opacity: 0.5;
-  position: relative;
-  transition: var(--anima-01);
-}
-.menu-link::after {
-  content: '';
-  height: 2px;
-  width: 0%;
-  display: block;
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  border-radius: var(--radius-01);
-  background: var(--brand-01);
-  transition: var(--anima-01);
-}
-.menu-link:hover:after {
-  width: 100%;
-  left: 0;
-}
-.menu-link:hover {
-  color: var(--brand-01);
-  opacity: 1;
-}
-.menu-link.menuActive {
-  color: var(--brand-01);
-  opacity: 1;
-}
-.menu-link.menuActive:after {
-  width: 100%;
-  left: 0;
-}
-/* Content */
-.nav-content {
-  height: 90vh;
-  color: var(--text-01);
-}
-.art-content {
-  display: none;
-  height: 100%;
-}
-.art-content.contActive {
-  display: flex;
-}
-
-.main {
-  padding: 5rem 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-.mainhead {
-  font-size: 2.5rem;
-  margin-bottom: 1rem;
-  display: flex;
-}
-.square {
-  width: 10rem;
-  height: 10rem;
-  background-color: var(--brand-01);
-  transform: scale(1) perspective(1000px) rotateY(0deg);
-  transition: 0.3s ease-in-out;
-}
-.square:hover {
-  transform: scale(1.05) perspective(1500px) rotateY(20deg);
-  animation: hoverEffect 2s forwards;
-}
-@keyframes hoverEffect {
-  to {
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  }
 }
 
 /* NAV */
@@ -230,7 +141,9 @@
   inset: calc(100% - 1.5px) 0 0 0; /* 3px = the thickness */
   background: var(--brand-01); /* the color */
   scale: 0 1;
-  transition: 0.3s, translate 0s 0.3s;
+  transition:
+    0.3s,
+    translate 0s 0.3s;
 }
 .dropdown-content:hover .list-drop:before {
   scale: 1;
@@ -241,9 +154,13 @@
 }
 .dropdown-content:hover .list-drop:has(~ .list-drop:hover)::before {
   translate: 100% 0;
-  transition: 0.2s 0.2s, scale 0s 0.4s;
+  transition:
+    0.2s 0.2s,
+    scale 0s 0.4s;
 }
 .dropdown-content:hover .list-drop:hover ~ .list-drop::before {
   translate: -100% 0;
-  transition: 0.2s 0.2s, scale 0s 0.4s;
+  transition:
+    0.2s 0.2s,
+    scale 0s 0.4s;
 }
