--- a/public/styles/layout/main.css
+++ b/public/styles/layout/main.css
@@ -1,32 +1,19 @@
-.art-content {
-  flex-direction: column;
-}
-.contActive {
-  display: flex;
-}
-.headNav {
-  margin-bottom: 1rem;
+.nav-memu {
+  height: 10vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: var(--gap-04);
+  gap: 2rem;
 }
-/* Menu */
-.menuSlide {
-  display: flex;
-  align-items: center;
-  gap: var(--gap-04);
-}
-.mS-menu {
+.menu-link {
   padding: 0.5rem 0.25rem;
-  color: var(--text-01);
   font-weight: 500;
   cursor: pointer;
   opacity: 0.5;
   position: relative;
   transition: var(--anima-01);
 }
-.mS-menu::after {
+.menu-link::after {
   content: '';
   height: 2px;
   width: 0%;
@@ -38,104 +25,62 @@
   background: var(--brand-01);
   transition: var(--anima-01);
 }
-.mS-menu:hover:after {
+.menu-link:hover:after {
   width: 100%;
   left: 0;
 }
-.mS-menu:hover {
+.menu-link:hover {
   color: var(--brand-01);
   opacity: 1;
 }
-.mS-menu.menuActive {
+.menu-link.menuActive {
   color: var(--brand-01);
   opacity: 1;
 }
-.mS-menu.menuActive:after {
+.menu-link.menuActive:after {
   width: 100%;
   left: 0;
 }
-
-/* ===== SLIDESHOW ===== */
-.slideshow {
-  height: 80vh;
-  width: 100%;
-  position: relative;
-  overflow: hidden;
-  border: none;
+/* Content */
+.nav-content {
+  height: 90vh;
+  color: var(--text-01);
+}
+.art-content {
+  height: 100%;
+  display: none;
+  flex-direction: column;
+}
+.art-content.contActive {
+  display: flex;
 }
 
-/* ===== SLIDE ===== */
-.slide {
-  padding-left: 0.75rem;
+/* Section About me */
+.sect-aboutme {
+  height: 100vh;
+  padding: 0 8rem;
   display: flex;
   align-items: center;
-  position: absolute;
-  inset: 0;
-  opacity: 0;
-  transform: translateX(-100%);
-  transition:
-    transform 0.6s ease,
-    opacity 0.6s ease;
-}
-.slide.from-left {
-  transform: translateX(-100%);
-}
-.slide.active {
-  opacity: 1;
-  transform: translateX(0);
+  justify-content: space-between;
 }
 
-/* ===== BG (50%) ===== */
-.slide-bg {
-  width: 60%;
+.box-imageme {
   height: max-content;
-  background-size: cover;
-  border: 2px solid var(--brand-01);
+  width: 22rem;
+  object-fit: cover;
   border-radius: var(--radius-03);
-  transition: var(--anima-01);
-}
-.slide-bg:hover {
   border: 2px solid var(--brand-01);
-  box-shadow: var(--shadow-block);
-  transform: translateY(-4px);
+}
+.box-imageme img {
+  border-radius: var(--radius-03);
 }
 
-/* ===== CONTENT (50%) ===== */
-.slide__content {
-  width: 40%;
-  height: 100%;
-  padding: 3rem;
+.bpx-textme {
+  width: 60%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  color: var(--text-01);
-  animation: fade-in 0.8s ease forwards;
-
-  & h2 {
-    font-size: 1.75rem;
-  }
-  & strong {
-    color: var(--brand-01);
-  }
-  & a {
-    width: min-content;
-    margin-top: 0.5rem;
-    display: flex;
-    align-items: center;
-    gap: var(--gap-01);
-  }
 }
-.subtitle {
-  color: var(--text-02);
-}
-/* animação leve */
-@keyframes fade-in {
-  from {
-    opacity: 0;
-    transform: translateX(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
+.bpx-textme h2 {
+  margin-bottom: 1rem;
+  text-transform: uppercase;
 }
